syntax = 'proto3';
option go_package = "raft/raftrpc";

message LogEntry {
  int32 term = 1;
  string item = 2;
}

message AppendEntriesRequest {
  int32                   term = 1;
  int32 prevIndex = 2;
  int32 prevTerm = 3;
  repeated LogEntry entries = 4;
}

message BoolResponse {
  bool result = 1;
}

service RaftService {
  rpc AppendEntries(AppendEntriesRequest) returns (BoolResponse);
}
